--- a/GiftExchangeApplication/app/src/main/res/values/strings.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Gift Exchange Application</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_create_acct">CreateAcctActivity</string>
 </resources>
