--- a/GiftExchangeApplication/app/src/main/res/values/strings.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
+
+    <!-- Menu Items -->
+    <string name="action_edit_group_name">Edit group name</string>
+
+    <!-- Base Strings for the App -->
     <string name="app_name">Gift Exchange Application</string>
+    <string name="pager_title_active_groups">Active Groups</string>
+    <string name="pager_title_pending_groups">Pending Groups</string>
+
+    <!-- Edit Group Dialogs -->
+    <string name="positive_button_edit_item">Edit name</string>
+    <string name="negative_button_cancel">Cancel</string>
+
 </resources>
