UPDATE: added ability to remove an entire group from details activity
Added the option to delete as a menu bar action. If selected, it brings
up dialog asking for confirmation. If yes, deletes entire group from
Firebase.

--- a/GiftExchangeApplication/app/src/main/res/values/strings.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 
     <!-- Menu Items -->
     <string name="action_edit_group_name">Edit group name</string>
+    <string name="action_remove_group">Remove group</string>
 
     <!-- Base Strings for the App -->
     <string name="app_name">Gift Exchange Application</string>
@@ -11,5 +12,8 @@
     <!-- Edit Group Dialogs -->
     <string name="positive_button_edit_item">Edit name</string>
     <string name="negative_button_cancel">Cancel</string>
+    <string name="dialog_message_are_you_sure_remove_group">
+        Are you sure you want to remove this group?
+    </string>
 
 </resources>
