UPDATE: Added text for user instruction & logins

--- a/GiftExchangeApplication/app/src/main/res/values/strings.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
         Are you sure you want to remove this group?
     </string>
 
+    <!-- Instructions and Loading Text -->
+    <string name="progress_dialog_loading">Loading…</string>
+    <string name="progress_dialog_authenticating_with_firebase">Authenticating…</string>
+
+
 </resources>
