UPDATE: Added ProgressDialog for logins & better SRP.
Main changes in this commit:
-Added Progress Dialog: while user is trying to login a dialog comes up
& shows loading swirl.

-Code was long & non SRP, broke up into multiple methods & added
clearer variables

-Also, now when hitting the back button on MainActivity it will no
longer take you back to the login. It will close the app. This is
because we are now closing the activity after the login is complete.

--- a/GiftExchangeApplication/app/src/main/res/values/strings.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/strings.xml
@@ -36,6 +36,10 @@
     <string name="button_signin_with_password">SIGN IN</string>
     <string name="button_sign_in">Sign In</string>
 
-
+    <!-- Errors -->
+    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
+    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
+    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
+    <string name="error_cannot_be_empty">This cannot be empty.</string>
 
 </resources>
