--- a/GiftExchangeApplication/app/src/main/res/values/strings.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/strings.xml
@@ -1,5 +1,47 @@
 <resources>
+
+    <!-- Menu Items -->
+    <string name="action_edit_group_name">Edit group name</string>
+    <string name="action_remove_group">Remove group</string>
+
+    <!-- Base Strings for the App -->
     <string name="app_name">Gift Exchange Application</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="title_activity_create_acct">CreateAcctActivity</string>
+    <string name="pager_title_active_groups">Active Groups</string>
+    <string name="pager_title_pending_groups">Pending Groups</string>
+    <string name="app_slogan">Exchanging gifts the easy way</string>
+
+    <!-- Edit Group Dialogs -->
+    <string name="positive_button_edit_item">Edit name</string>
+    <string name="negative_button_cancel">Cancel</string>
+    <string name="dialog_message_are_you_sure_remove_group">
+        Are you sure you want to remove this group?
+    </string>
+
+    <!-- Instructions and Loading Text -->
+    <string name="progress_dialog_loading">Loading…</string>
+    <string name="progress_dialog_authenticating_with_firebase">Authenticating…</string>
+    <string name="progress_dialog_creating_user_with_firebase">Authenticating…</string>
+
+    <!-- Login & Create Account Screen -->
+    <string name="title_activity_create_account">Create Account</string>
+    <string name="hint_enter_email">Email</string>
+    <string name="hint_enter_password">Password</string>
+    <string name="hint_confirm_password">Confirm password</string>
+    <string name="hint_enter_first_name">First name</string>
+    <string name="hint_enter_last_name">Last name</string>
+    <string name="text_dont_have_account">Don\'t have an account?</string>
+    <string name="button_create_account">Sign Up</string>
+    <string name="text_already_have_account">Already have an account?</string>
+    <string name="button_signin_with_google">SIGN IN WITH GOOGLE</string>
+    <string name="button_signin_with_password">SIGN IN</string>
+    <string name="button_sign_in">Sign In</string>
+
+    <!-- Errors -->
+    <string name="error_message_email_issue">There was an error with your email; please check that you entered it correctly.</string>
+    <string name="error_message_failed_sign_in_no_network">There was a problem with the network connection.\nAre you sure you\'re connected to the internet?</string>
+    <string name="error_invalid_password_not_valid">Please enter a password that is at least 6 characters long.</string>
+    <string name="error_cannot_be_empty">This cannot be empty.</string>
+    <string name="error_email_taken">This email is already taken</string>
+    <string name="error_invalid_email_not_valid">Please enter a valid email</string>
+
 </resources>
