Finished ViewProfile pages.

--- a/GiftExchangeApplication/app/src/main/res/values/strings.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <!-- About Me Screen -->
     <string name="about_me_title">About Me:</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
